<resources>
    <string name="app_name">U-Management-beta</string>
    <string name="textoProm">**Promedios**</string>
    <string name="textoFinan">**Finanzas**</string>
    <string name="textoCalen">**Calendario**</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="BtnProm">- Promedios -</string>
    <string name="BtnFinanzas">- Finanzas -</string>
    <string name="BtnCalendar">- Calendario -</string>
    <string name="Image_Button">Descripción…</string>
    <string name="Nota">Nota:</string>
    <string name="NotaDef">Nota Definitiva:</string>
    <string name="Porcentaje">Porcentaje %:</string>
    <string name="Creditos">Creditos:</string>
    <string name="Prom">CALCULAR NOTA</string>
    <string name="Score">0.0</string>
    <string name="Cant_Notas">Llevas \'0\' notas promediadas</string>
    <string name="Add">Añadir Nota</string>
    <string name="Remove">Eliminar Nota</string>
    <string name="Semestre">Promedio Semestral</string>
    <string name="Materia">Promedio x Materia</string>
    <string name="Swich">Ir a Prom Materia</string>
    <string name="Switch">Ir a Prom Semestre</string>
    <string name="swi">Ir al Home</string>
    <string name="inc">0.0</string>
    <string name="egre">0.0</string>
    <string name="bal">0.0</string>
    <string name="limpiar">Reset</string>
    <string name="enter">Digite el Ingreso o Egreso</string>
    <string name="bill">Deudas</string>
    <string name="transport">Transporte</string>
    <string name="out">Salida</string>
    <string name="shop">Mercado</string>
    <string name="health">Salud</string>
    <string name="Other">Otra</string>
    <string name="Porcentajes">Deudas 0%/Salud 0%/Mercado 0%/Transporte 0%/Salidas 0%/Otro 0%</string>
    <string name="tituloEvento">Titulo del Evento</string>
    <string name="descripcionEvento">Descripcion del Evento</string>
    <string name="lugarEvento">Lugar del Evento</string>
    <string name="fechai">Fecha Inicio</string>
    <string name="horai">Hora Inicio</string>
    <string name="fechaf">Fecha Final</string>
    <string name="horaf">Hora Final</string>
    <string name="aggCal">Agregar al Calendario</string>
    <string name="formatf">dd-mm-yyyy</string>
    <string name="formath">00:00</string>

</resources>